wp-content/themes/faces/app/sass/_common.scss
body,
html {
  position: relative;
  font-family: 'Manrope', "Helvetica Neue", -apple-system, system-ui, BlinkMacSystemFont, "Segoe UI", Oxygen-Sans, sans-serif;
  color: #fff;
}

@include response-to(small) {
  html {
    margin-top: 0!important;
  }

  #wpadminbar {
    display: none;
  }
}

body {
  padding-top: 121px;
  background-color: #000;
  background-image: url('../img/bg.png');

  @include response-to(medium) {
    padding-top: 91px;
  }
}

.wrapper {
  max-width: 100%;
  overflow: hidden;
}

div.page {
  overflow-x: hidden;
  margin-top: 100px;
  padding-top: 15px;

  @include response-to(large) {
    margin-top: 65px;
  }
}

.more-btn {

  &:before {
    position: absolute;
    content: '';
    height: 3px;
    max-width: 100%;
    width: 100%;
    display: block;
    background-color: $primary-color;
    bottom: -3px;
    left: 50%;
    transform: translateX(-50%);
    @include transition-ease;
  }

  &:hover {
    color: $primary-color;

    &:before {
      max-width: 0;
    }
  }
}

.p-0 {
  padding: 0;
}

.b-0 {
  border: 0;
}

.ml-auto {
  margin-left: auto;
}

.mr-auto {
  margin-right: auto;
}

.mr-16 {
  margin-right: 16px;
}

.mb-115 {
  margin-bottom: 115px;
}

.mx-auto {
  margin-left: auto;
  margin-right: auto;
}

figure img {
  display: block;
  max-width: 100%;
  height: auto;
}

.mb-14 {
  margin-bottom: 14px;
}

.pos-a {
  position: absolute;
}

.pos-r {
  position: relative;
}

.pos-f {
  position: fixed;
}

.z-modal {
  z-index: 100;
}

.z-0 {
  z-index: 0;
}

.z-1 {
  z-index: 1;
}

.z-2 {
  z-index: 2;
}

.bottom-0 {
  bottom: 0;
}

.top-0 {
  top: 0;
}

.left-0 {
  left: 0;
}

.right-0 {
  right: 0;
}

.full-width {
  width: 100%;
}

.max-width-100 {
  max-width: 100%;
}

.width-fit-content {
  width: fit-content;
}

.max-height-100 {
  max-height: 100%;
}

.width-auto {
  width: auto;
}

.height-auto {
  height: auto;
}

.half-width {
  width: calc(50% - 10px);
}

.scroll {
  overflow: scroll;
}

.h-100 {
  height: 100%;
}

.flex {
  display: flex;
}

.none {
  display: none;
}

.flex-col {
  flex-direction: column;
}

.flex-grow-1 {
  flex-grow: 1;
}

.flex-auto {
  flex: auto;
}

.align-center {
  align-items: center;
}

.align-stretch {
  align-items: stretch;
}

.align-start {
  align-items: flex-start;
}

.justify-center {
  justify-content: center;
}

.justify-between {
  justify-content: space-between;
}

.justify-end {
  justify-content: flex-end;
}

.flex-wrap {
  flex-wrap: wrap;
}

.flex-center {
  display: flex;
  align-items: center;
  justify-content: center;
}

.z--100 {
  z-index: -100;
}

.opacity-0 {
  opacity: 0;
}

.order-1 {
  order: 1;
}

.order-2 {
  order: 2;
}

.order-3 {
  order: 3;
}

.block {
  display: block;
}

.inline-block {
  display: inline-block;
}

.uppercase {
  text-transform: uppercase;
}

.border-bottom-white-1 {
  border-bottom: 1px solid #fff;
}

/*.border-radius-2 {
  border-radius: 2px;
}*/

.border50 {
  border-radius: 50%;
}

.border-70 {
  border-radius: 70px;
}

.text-12 {
  font-size: 12px;
}

.text-14 {
  font-size: 14px;
}

.letter-spacing-002 {
  letter-spacing: 0.02em;
}

.text-18 {
  font-size: 18px;
}

.text-20 {
  font-size: 20px;
}

.text-22 {
  font-size: 22px;
}

.text-26 {
  font-size: 26px;
}

.text-30 {
  font-size: 30px;
}

.text-34 {
  font-size: 34px;
}

.text-36 {
  font-size: 36px;
}

.text-40 {
  font-size: 40px;
}

.text-45 {
  font-size: 45px;
}

.text-50 {
  font-size: 50px;
}

.text-55 {
  font-size: 55px;
}

.text-60 {
  font-size: 60px;
}

.text-62 {
  font-size: 62px;
}

.text-70 {
  font-size: 70px;
}

.line-height-19 {
  line-height: 19px;
}

.line-height-21 {
  line-height: 21px;
}

.line-height-27 {
  line-height: 27px;
}

.line-height-25 {
  line-height: 25px;
}

.line-height-30 {
  line-height: 30px;
}

.line-height-48 {
  line-height: 48px;
}

.line-height-49 {
  line-height: 49px;
}

.line-height-70 {
  line-height: 70px;
}

.line-height-73 {
  line-height: 73px;
}

.line-height-82 {
  line-height: 82px;
}

.line-height115 {
  line-height: 115%;
}

.line-height-1 {
  line-height: 100%;
}

.line-height144 {
  line-height: 144%;
}

.text-center {
  text-align: center;
}

.text-right {
  text-align: right;
}

.font700 {
  font-weight: 700;
}

.color-primary {
  color: $primary-color;
}

.color-white {
  color: #fff;
}

.color-black {
  color: #000;
}

.bg-white {
  background-color: #fff;
}

.bg-transparent {
  background-color: transparent;
}

.header-grey-bg {
  background-color: $header-grey;
}

.bg-primary {
  background-color: $primary-color;
}

.transition {
  @include transition-ease;
}

.pointer {
  cursor: pointer;
}

.cursor-default {
  cursor: default;
}

.unselect {
  user-select: none;
}

.underline {
  text-decoration: underline;
}

.ws-nowrap {
  white-space: nowrap;
}

.text-ellipsis {
  text-overflow: ellipsis;
}

.capitalize {
  text-transform: capitalize;
}

.hidden {
  overflow: hidden;
}

.object-fit-cover {
  object-fit: cover;
}

.font-tenor {
  font-family: 'Tenor Sans', sans-serif;
}

.absolute-center {
  position: absolute;
  left: 50%;
  top: 50%;
  transform: translate(-50%, -50%);
}

.absolute-center-x {
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
}

.absolute-center-y {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
}

@include response-to(huge) {
  .huge {

    &-text-center {
      text-align: center;
    }

    &-text-18 {
      font-size: 18px;
    }

    &-text-16 {
      font-size: 16px;
    }

    &-line-height-22 {
      line-height: 22px;
    }

    &-line-height-25 {
      line-height: 25px;
    }

    &-m-0 {
      margin: 0;
    }

    &-mr-8 {
      margin-right: 8px;
    }

    &-mb-80 {
      margin-bottom: 80px;
    }
  }
}
/* ... */

